--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,30 @@
   flex-wrap: wrap;
 }
 
+.alert-popup {
+  position: relative;
+  z-index: 2;
+  width: 200px;
+  height: 100px;
+  font-size: 18px;
+}
+
 .hidden {
   display: none;
+}
+
+@media only screen and (max-width: 800px) {
+  
+  body {
+    min-width: 780px;
+  }
+
+  .App-header {
+    width: 100vw;
+    font-size: .8rem;
+    nav {
+      font-size: 1rem;
+    }
+  }
+
 }
